<resources>
    <string name="app_name">機械学習</string>
    <string name="question_title">問題</string>
    <string name="question_text">問題を選択してください</string>
    <string name="question_1">問題1</string>
    <string name="question_2">問題2</string>
    <string name="question_3">問題3</string>
    <string name="question_4">問題4</string>
    <string name="input_layer">入力層</string>
    <string name="output_layer">出力層</string>
    <string name="LED_1">リンゴ</string>
    <string name="LED_2">バナナ</string>
    <string name="LED_3">ブドウ</string>
    <string name="output_text">教師データを作成してください</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="Q1_1">Q1.丸いですか？</string>
    <string name="Q1_2">Q2.長いですか？</string>
    <string name="Q1_3">Q3.赤いですか？</string>
    <string name="Q2_1">Q1.肺呼吸ですか？</string>
    <string name="Q2_2">Q2.羽がありますか？</string>
    <string name="Q2_3">Q3.足が多いですか？</string>
    <string name="Q3_1">Q1.日本にありますか？</string>
    <string name="Q3_2">Q2.文化遺産ですか？</string>
    <string name="Q3_3">Q3.兵庫県にありますか？</string>
    <string name="Q4_1">Q1.緑ですか？</string>
    <string name="Q4_2">Q2.丸いですか？</string>
    <string name="Q4_3">Q3.野菜ですか？</string>
    <string name="q1_Q1_y1">はい</string>
    <string name="q1_Q1_y2">はい</string>
    <string name="q1_Q1_y3">はい</string>
    <string name="q1_Q2_y1">はい</string>
    <string name="q1_Q2_y2">はい</string>
    <string name="q1_Q2_y3">はい</string>
    <string name="q1_Q3_y1">はい</string>
    <string name="q1_Q3_y2">はい</string>
    <string name="q1_Q3_y3">はい</string>
    <string name="q1_Q1_n1">いいえ</string>
    <string name="q1_Q1_n2">いいえ</string>
    <string name="q1_Q1_n3">いいえ</string>
    <string name="q1_Q2_n1">いいえ</string>
    <string name="q1_Q2_n2">いいえ</string>
    <string name="q1_Q2_n3">いいえ</string>
    <string name="q1_Q3_n1">いいえ</string>
    <string name="q1_Q3_n2">いいえ</string>
    <string name="q1_Q3_n3">いいえ</string>
    <string name="next">NEXT</string>
    <string name="study_title">学習</string>
    <string name="study_text">学習中・・・</string>
    <string name="study_result_title">学習結果</string>
    <string name="study_result_text">可変抵抗を調整して重みを更新してください</string>
    <string name="result_R11">R11</string>
    <string name="result_R12">R12</string>
    <string name="result_R13">R13</string>
    <string name="result_R21">R21</string>
    <string name="result_R22">R22</string>
    <string name="result_R23">R23</string>
    <string name="result_R31">R31</string>
    <string name="result_R32">R32</string>
    <string name="result_R33">R33</string>
    <string name="bias1">バイアス1</string>
    <string name="bias2">バイアス2</string>
    <string name="bias3">バイアス3</string>
    <string name="finish">finish</string>

    <string name="testButton">testButton</string>
    <string name="testTextView">testTextView</string>


</resources>